--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,15 +51,16 @@ hyper = { version = "0.14", features = ["full"] }
 typst = { git = "https://github.com/Myriad-Dreamin/typst.git", rev = "c7e91e216310d5c8dca3eee8a23a64b3ede99e15" }
 typst-library = { git = "https://github.com/Myriad-Dreamin/typst.git", rev = "c7e91e216310d5c8dca3eee8a23a64b3ede99e15" }
 typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", rev = "c7e91e216310d5c8dca3eee8a23a64b3ede99e15" }
-typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "ed6390702c8e7373164115a41e2d9407fb4a04bd", package = "typst-ts-svg-exporter" }
-typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "ed6390702c8e7373164115a41e2d9407fb4a04bd", package = "typst-ts-core" }
-typst-ts-compiler = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "ed6390702c8e7373164115a41e2d9407fb4a04bd", package = "typst-ts-compiler" }
+# typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "ed6390702c8e7373164115a41e2d9407fb4a04bd", package = "typst-ts-svg-exporter" }
+# typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "ed6390702c8e7373164115a41e2d9407fb4a04bd", package = "typst-ts-core" }
+# typst-ts-compiler = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "ed6390702c8e7373164115a41e2d9407fb4a04bd", package = "typst-ts-compiler" }
 
 # typst = { path = "../../rust/typst/crates/typst" }
 # typst-library = { path = "../../rust/typst/crates/typst-library" }
-# typst-ts-svg-exporter = { path = "../../rust/typst.ts/exporter/svg" }
-# typst-ts-compiler = { path = "../../rust/typst.ts/compiler" }
-# typst-ts-core = { path = "../../rust/typst.ts/core" }
+# typst-syntax = { path = "../../rust/typst/crates/typst-syntax" }
+typst-ts-svg-exporter = { path = "../../rust/typst.ts/exporter/svg" }
+typst-ts-compiler = { path = "../../rust/typst.ts/compiler" }
+typst-ts-core = { path = "../../rust/typst.ts/core" }
 
 [build-dependencies]
 clap = { version = "4.2.1", features = ["derive", "string"] }
