--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,12 @@ doc = false
 [dependencies]
 typst = "0.8.0"
 typst-library = "0.8.0"
-typst-ts-svg-exporter = "0.4.0-rc3"
-typst-ts-core = "0.4.0-rc3"
-typst-ts-compiler = "0.4.0-rc3"
+typst-ts-svg-exporter = "0.4.0-rc7"
+typst-ts-core = { version = "0.4.0-rc7", default-features = false, features = [
+  "flat-vector",
+  "vector-bbox",
+] }
+typst-ts-compiler = "0.4.0-rc7"
 
 chrono = { version = "0.4", default-features = false, features = [
   "clock",
@@ -51,12 +54,13 @@ hyper = { version = "0.14", features = ["full"] }
 typst = { git = "https://github.com/Myriad-Dreamin/typst.git", rev = "c7e91e216310d5c8dca3eee8a23a64b3ede99e15" }
 typst-library = { git = "https://github.com/Myriad-Dreamin/typst.git", rev = "c7e91e216310d5c8dca3eee8a23a64b3ede99e15" }
 typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", rev = "c7e91e216310d5c8dca3eee8a23a64b3ede99e15" }
-typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "ed6390702c8e7373164115a41e2d9407fb4a04bd", package = "typst-ts-svg-exporter" }
-typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "ed6390702c8e7373164115a41e2d9407fb4a04bd", package = "typst-ts-core" }
-typst-ts-compiler = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "ed6390702c8e7373164115a41e2d9407fb4a04bd", package = "typst-ts-compiler" }
+typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "004a0d3baff842369761abaefd61fd27e4222c8b", package = "typst-ts-svg-exporter" }
+typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "004a0d3baff842369761abaefd61fd27e4222c8b", package = "typst-ts-core" }
+typst-ts-compiler = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "004a0d3baff842369761abaefd61fd27e4222c8b", package = "typst-ts-compiler" }
 
 # typst = { path = "../../rust/typst/crates/typst" }
 # typst-library = { path = "../../rust/typst/crates/typst-library" }
+# typst-syntax = { path = "../../rust/typst/crates/typst-syntax" }
 # typst-ts-svg-exporter = { path = "../../rust/typst.ts/exporter/svg" }
 # typst-ts-compiler = { path = "../../rust/typst.ts/compiler" }
 # typst-ts-core = { path = "../../rust/typst.ts/core" }
