--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -218,7 +218,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: typst-preview-${{ env.target }}.debug
-          path: target/{{ env.RUST_TARGET }}/release/typst-preview.debug
+          path: target/${{ env.RUST_TARGET }}/release/typst-preview.debug
       - name: Copy binary to output directory
         run: |
           cp "target/${{ env.RUST_TARGET }}/release/typst-preview" "addons/vscode/out/"
